fix RPMLint Actions

--- a/.github/workflows/rpmlint.yml
+++ b/.github/workflows/rpmlint.yml
@@ -7,10 +7,11 @@ on:
   push:
     paths:
       - '**.spec'
+      - '**/rpmlint.yml'
 
 jobs:
   rpmlint:
-    runs-on: ubuntu-slim
+    runs-on: ubuntu-latest
     container: fedora:latest
     steps:
       - name: Install RPMLint
