monero: fix config and unitfile

--- a/monero/monerod.conf
+++ b/monero/monerod.conf
@@ -4,8 +4,8 @@ log-file=/dev/null
 max-log-file-size=0
 
 data-dir=/var/lib/monero
-non-interactive=1
 enforce-dns-checkpointing=1
+enable-dns-blocklist=1
 ban-list=/usr/share/monero/ban_list.txt
 
 no-igd=1
@@ -25,4 +25,6 @@ zmq-pub=tcp://127.0.0.1:18083
 prune-blockchain=1
 sync-pruned-blocks=1
 db-sync-mode=safe:sync
+
+tx-proxy=tor,127.0.0.1:9050,16
 
