--- a/p2pool/p2pool.service
+++ b/p2pool/p2pool.service
@@ -1,7 +1,7 @@
 # Systemd service for p2pool
 [Unit]
 Description=P2Pool daemon
-After=network-online.target
+After=network-online.target monerod.service
 RequiresMountsFor=/var/lib/p2pool
 
 [Service]
@@ -12,6 +12,7 @@ RestartSec=30
 User=monero
 Group=monero
 
+ProtectProc=invisible
 NoNewPrivileges=True
 KeyringMode=private
 ProtectSystem=full
