--- a/p2pool/p2pool.service
+++ b/p2pool/p2pool.service
@@ -5,8 +5,7 @@ After=network-online.target monerod.service
 RequiresMountsFor=/var/lib/p2pool
 
 [Service]
-EnvironmentFile=/etc/monero/p2pool.conf
-ExecStart=/usr/bin/p2pool --wallet ${wallet} --rpc-port ${rpcport} --stratum ${stratum} --data-dir ${datadir} --${pool}
+ExecStart=/usr/bin/p2pool --params-file /etc/monero/p2pool.conf
 Type=exec
 Restart=on-failure
 RestartSec=30
